--- a/MIT xPro assignment/index.html
+++ b/MIT xPro assignment/index.html
@@ -5,22 +5,14 @@
     <title>Sam Swaringen's Homepage</title>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
-  <head>
-  <header>
-    <img src="banner.jpg" width="1000" height="225">
-  </header>
+  </head>
   <body>
-    <h1>Sam Swaringen's Homepage</h1>
-    <figure>
-      <img src="mefishing.jpg"
-      alt="Me fishing in the keys this past summer. I'm holding a mutton snapper"
-      width="384" height="512"
-      title="Me holding a mutton snapper I caught in the Keys">
-      <figcaption>Me holding a mutton snapper Keys,FL</figcaption>
-    </figure>
-  </body>
-
-  <footer>
+    <main>
+    <h1 id="websitetitle">Sam Swaringen's Homepage</h1>
+    <p> Welcome to my Website! It is currently a work in progress and I wil be updating regularly</p>
+    </main>
+   <footer>
     <p>Made by Sam Swaringen 2020</p>
-  </footer>
- <html>
+   </footer>
+  </body>
+</html>
