--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <main>
     <h1 id="websitetitle">Sam Swaringen's Homepage</h1>
-    <p class="welcome"> Welcome to my Website! It is currently a work in progress and I will be updating regularly</p>
-    <p class="stuff">I'm going to put some interesting stuff about me here.</p>
-    <p class="links"> Maybe some links to my linkdn or my resume here</p>
+    <span class="welcome"> Welcome to my Website! It is currently a work in progress and I will be updating regularly</span>
+    <span class="stuff">I'm going to put some interesting stuff about me here.</span>
+    <span class="links"> Maybe some links to my linkdn or my resume here</span>
     </main>
    <footer>
     <p>Made by Sam Swaringen 2020</p>
