--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <title>Sam Swaringen's Homepage</title>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <main>
     <h1 id="websitetitle">Sam Swaringen's Homepage</h1>
-    <span class="welcome"> Welcome to my Website! It is currently a work in progress and I will be updating regularly</span>
-    <span class="stuff">I'm going to put some interesting stuff about me here.</span>
-    <span class="links"> Maybe some links to my linkdn or my resume here</span>
+    <p class="welcome"> Welcome to my Website! It is currently a work in progress and I will be updating regularly</p>
+    <p class="stuff">I'm going to put some interesting stuff about me here.</p>
+    <p class="links"> Maybe some links to my linkedn or my resume here</p>
     </main>
    <footer>
     <p>Made by Sam Swaringen 2020</p>
    </footer>
   </body>
 </html>
-
