--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
     <h1 id="websitetitle">Sam Swaringen's Homepage</h1>
     <p class="welcome"> Welcome to my Website! It is currently a work in progress and I will be updating regularly</p>
-    <p class="stuff">I'm going to put some interesting stuff about me here.</p>
+      <p class="stuff"><a href = 'samswaringen.github.io/week4/'></a></p>
     <p class="links"> Maybe some links to my linkedn or my resume here</p>
     </main>
    <footer>
