--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <body>
     <main>
     <h1 id="websitetitle">Sam Swaringen's Homepage</h1>
-    <p class="welcome"> Welcome to my Website! It is currently a work in progress and I will be updating regularly</p>
-    <p class="stuff"><a href="https://samswaringen.github.io/week4/">PacMan Eraser Game</a><br>
-      <a href="https://samswaringen.github.io/week3/">BigBang Painter</a></p>
+    <p class="welcome"> Welcome to my Website!</p>
+    <p class="stuff">
+      <a href="https://samswaringen.github.io/week3/">BigBang Painter</a><--Week3</p><br>
+      <a href="https://samswaringen.github.io/week4/">PacMan Eraser Game</a><--Week4
     <p class="links"> Maybe some links to my linkedn or my resume here</p>
     </main>
    <footer>
