--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1 id="websitetitle">Sam Swaringen's Homepage</h1>
     <p class="welcome"> Welcome to my Website!</p>
     <p class="stuff">
-      <a href="https://samswaringen.github.io/week3/">BigBang Painter</a><--Week3</p><br>
-      <a href="https://samswaringen.github.io/week4/">PacMan Eraser Game</a><--Week4
+      <a href="https://samswaringen.github.io/week3/">BigBang Painter</a><--Week3<br>
+      <a href="https://samswaringen.github.io/week4/">PacMan Eraser Game</a><--Week4</p>
     <p class="links"> Maybe some links to my linkedn or my resume here</p>
     </main>
    <footer>
