--- a/week3/index.html
+++ b/week3/index.html
@@ -1,4 +1,3 @@
-
 <link rel="stylesheet" type="text/css" href="mystyle.css" />
 <body>
   <script src="ball.js"></script>
@@ -7,25 +6,27 @@
     const size = 20; // size of ball
     const x = []; // position
     const y = [];
-    const stepsize = 16;
+    const stepsize = 15;
     const balls = []; // array to hold all free balls
     let velocity_x = [];
     let velocity_y = [];
     let gravity = 0; 
+    imgWidth = window.innerWidth -10;
+    imgHeight = window.innerHeight -10;
     //Everything above provided to me
 
     var colors = [];//Create empty array for random colors made in factory
 
     // Everything below was provided to me
     function checkWalls(i) {
-      if (x[i] < 0) velocity_x[i] = -velocity_x[i];
-      if (x[i] + size > 800) {
+      if (x[i] < 10) velocity_x[i] = -velocity_x[i];
+      if (x[i] + size > imgWidth) {
         velocity_x[i] = -velocity_x[i];
-        x[i] = 800 - size;
+        x[i] = imgWidth - size;
       }
-      if (y[i] + size > 400) {
+      if (y[i] + size > imgHeight) {
         velocity_y[i] = -velocity_y[i];
-        y[i] = 400 - size;
+        y[i] = imgHeight - size;
       } else if (y[i] < 0) {
         y[i] = 0;
         velocity_y[i] = -velocity_y[i];
@@ -45,7 +46,7 @@
         balls[i].style.left = x[i];
         balls[i].style.top = y[i]; 
       }
-      setTimeout(update, 10); // this calls update ever 1/10 second
+      setTimeout(update, 15); // this calls update ever 1/10 second
     }
     function getRandom(scale) {
       return Math.floor(Math.random() * scale + 1);
@@ -67,8 +68,8 @@
       for (let i = 0; i < total; i++) {
         let velx = getRandomFloat(stepsize);
         let vely = getRandomFloat(stepsize);
-        makeBall(400 - size / 2, 200 - size / 2, colors[i], velx, vely, 0);
-        makeBall(400 - size / 2, 200 - size / 2, colors[i], -velx, -vely, 0);
+        makeBall(imgWidth/2 - size / 2, imgHeight/2- size / 2, colors[i], velx, vely, 0);
+        makeBall(imgWidth/2 - size / 2, imgHeight/2 - size / 2, colors[i], -velx, -vely, 0);
       }
     }
       //Everything above provided to me
@@ -80,8 +81,6 @@
       <rect
         x="0"
         y="0"
-        width="800"
-        height="400"
         stroke="black"
         fill="transparent"
         stroke-width="5"
