changed my landing website. 1st edition

--- a/index.html
+++ b/index.html
@@ -1,22 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Sam Swaringen's Homepage</title>
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <main>
-    <h1 id="websitetitle">Sam Swaringen's Homepage</h1>
-    <p class="welcome"> Welcome to my Website!</p>
-    <p class="stuff">
-      <a href="https://samswaringen.github.io/week3/">BigBang Painter</a><--Week3<br>
-      <a href="https://samswaringen.github.io/week4/">PacMan Eraser Game</a><--Week4</p>
-    <p class="links"> Maybe some links to my linkedn or my resume here</p>
-    </main>
-   <footer>
-    <p>Made by Sam Swaringen 2020</p>
-   </footer>
-  </body>
+<html>
+    <head>        
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Barrio&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Flavors&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Monofett&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Slackey&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Knewave&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Fascinate&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Miltonian&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Butcherman&display=swap" rel="stylesheet">
+        <link rel='stylesheet' type='text/css' href='style.css' /> 
+    </head> 
+      <div id = 'background'></div>
+      <div id = 'header'>Sam Swaringen's Portfolio</div>
+      <div id = 'folders'>
+          <div id = 'div0'>
+        <img id = 'file0' src = 'filefolder.png' style = 'top: 75'><a href = 'https://samswaringen.github.io/default%20page' id = 'website0'><div id = 'link0' style = 'height: 29; top: 124'>Coming Soon!</div></a>
+          </div>
+        <div id = 'div1'>
+          <img id = 'file1' src = 'filefolder.png' style = 'top: 115'><a href = 'https://samswaringen.github.io/default%20page' id = 'website1'><div id = 'link1' style = 'height: 29; top: 164'>Coming Soon!</div></a>
+      </div>
+      <div id = 'div2'>
+          <img id = 'file2' src = 'filefolder.png' style = 'top: 155'><a href = 'https://samswaringen.github.io/default%20page' id = 'website2'><div id = 'link2' style = 'height: 29; top: 204'>Coming Soon!</div> </a>
+      </div>
+      <div id = 'div3'>
+          <img id = 'file3' src = 'filefolder.png' style = 'top: 195'><a href = 'https://samswaringen.github.io/default%20page'id = 'website3'><div id = 'link3' style = 'height: 29; top: 244'>Coming Soon!</div> </a>
+      </div>
+      <div id = 'div4'>
+          <img id = 'file4' src = 'filefolder.png' style = 'top: 235'><a href = 'https://samswaringen.github.io/default%20page'id = 'website4'><div id = 'link4' style = 'height: 29; top: 284'>Coming Soon!</div> </a>
+      </div>
+      <div id = 'div5'>
+          <img id = 'file5' src = 'filefolder.png' style = 'top: 275'><a href = 'https://samswaringen.github.io/default%20page' id = 'website5'><div id = 'link5' style = 'height: 29; top: 324'>Coming Soon!</div> </a>
+      </div>
+      <div id = 'div6'>
+          <img id = 'file6' src = 'filefolder.png' style = 'top: 315'><a href = 'https://samswaringen.github.io/default%20page'id = 'website6'><div id = 'link6'style = 'height: 29; top: 364'>Coming Soon!</div> </a>
+      </div>
+      <div id = 'div7'>
+          <img id = 'file7' src = 'filefolder.png' style = 'top: 355'><a href = 'https://samswaringen.github.io/default%20page' id = 'website7'><div id = 'link7' style = 'height: 29; top: 404'>Coming Soon!</div> </a>
+      </div>
+      <div id = 'div8'>
+          <img id = 'file8' src = 'filefolder.png' style = 'top: 395'><a href = 'https://samswaringen.github.io/week4' id = 'website8'><div id = 'link8'style = 'height: 29; top: 444'><img src = 'PacMan1.png' id = 'pacPic' width = '15' height = '15'>PacManEraser<img src = 'Ghost.png' id = 'ghostPic' width = '15' height = '15'></div> </a>
+      </div>
+      <div id = 'div9'>
+          <img id = 'file9' src = 'filefolder.png' style = 'top: 435'><a href = 'https://samswaringen.github.io/week3' id = 'website9'><div id = 'link9'style = 'height: 51; top: 484'>Random Painter</div></a>
+          <a href = 'https://samswaringen.github.io/week3' id = 'website10'><div id = 'link10' style = 'height: 68; top: 484'></div></a>
+      </div>
+    </div>
+    <div id = 'iframeDiv'>
+    <iframe src = 'https://samswaringen.github.io/default%20page' id = 'newFrame' name = 'newFrame' scrolling = 'no' style = 'width: 550; height: 683;'></iframe>
+    </div>
+    <script src = 'script.js'></script>
 </html>
