added more about me

--- a/default page/index.html
+++ b/default page/index.html
@@ -3,8 +3,13 @@
 
     </head>
     <body>
-        <h1>Default Page</h1>
-        <h2>Default Subtitle</h2>
-        <p>Default Paragraph</p>
+        <h1>My Website</h1>
+        <h2>About My Website</h2>
+        <p>First and foremost let me Thank You for visiting my portfolio website.<br>
+            I've been working hard to build a unique way to view my work so I hope you enojy it.<br>
+            As you know, the work is never finished so I will be updating this frequently to keep current as well as reworking older projects as I become more comfortable and competent with Javascript, HTML, and CSS.</p>
+        <h2>Important Links</h2>
+        <p><a href = 'https://github.com/samswaringen'>Github</a><br>
+           <a href = 'https://www.linkedin.com/in/sam-swaringen-245611207/'>Linkedin</a> </p>    
     </body>
 </html>
