added transitions and borders

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id = 'header'>Sam Swaringen's Portfolio</div>
       <div id = 'folders'>
           <div id = 'div0'>
-        <img id = 'file0' src = 'filefolder.png' style = 'top: 75'><a href = 'https://samswaringen.github.io/default%20page' id = 'website0'><div id = 'link0' style = 'height: 29; top: 124'>Coming Soon!</div></a>
+        <img id = 'file0' src = 'filefolder.png' style = 'top: 75'><a href = 'https://samswaringen.github.io/default%20page' id = 'website0'><div id = 'link0' style = 'height: 29; top: 124'>About Me</div></a>
           </div>
         <div id = 'div1'>
           <img id = 'file1' src = 'filefolder.png' style = 'top: 115'><a href = 'https://samswaringen.github.io/default%20page' id = 'website1'><div id = 'link1' style = 'height: 29; top: 164'>Coming Soon!</div></a>
@@ -48,8 +48,10 @@
           <a href = 'https://samswaringen.github.io/week3' id = 'website10'><div id = 'link10' style = 'height: 68; top: 484'></div></a>
       </div>
     </div>
-    <div id = 'iframeDiv'>
+    <div id = 'iframeDiv'></div>
+    <div id = 'inner-Frame'>
     <iframe src = 'https://samswaringen.github.io/default%20page' id = 'newFrame' name = 'newFrame' scrolling = 'no' style = 'width: 550; height: 683;'></iframe>
     </div>
+
     <script src = 'script.js'></script>
 </html>
