--- a/portfolio webpage/index.html
+++ b/portfolio webpage/index.html
@@ -18,40 +18,40 @@
       <div id = 'header'>Sam Swaringen's Portfolio</div>
       <div id = 'folders'>
           <div id = 'div0'>
-        <img id = 'file0' class = 'files' src = 'filefolder.png' style = 'top: 75'><a href = 'https://samswaringen.github.io/default%20page' id = 'website0'><div id = 'link0' class = 'links' style = 'height: 29; top: 124'>About Me</div></a>
+        <img id = 'file0' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website0'><div id = 'link0' class = 'links' style = 'height: 29; top: 129'>About Me</div></a>
           </div>
         <div id = 'div1'>
-          <img id = 'file1' class = 'files' src = 'filefolder.png' style = 'top: 115'><a href = 'https://samswaringen.github.io/default%20page' id = 'website1'><div id = 'link1' class = 'links' style = 'height: 29; top: 164'>Coming Soon!</div></a>
+          <img id = 'file1' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website1'><div id = 'link1' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div></a>
       </div>
       <div id = 'div2'>
-          <img id = 'file2' class = 'files' src = 'filefolder.png' style = 'top: 155'><a href = 'https://samswaringen.github.io/default%20page' id = 'website2'><div id = 'link2' class = 'links' style = 'height: 29; top: 204'>Coming Soon!</div> </a>
+          <img id = 'file2' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website2'><div id = 'link2' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
       </div>
       <div id = 'div3'>
-          <img id = 'file3' class = 'files' src = 'filefolder.png' style = 'top: 195'><a href = 'https://samswaringen.github.io/default%20page'id = 'website3'><div id = 'link3' class = 'links' style = 'height: 29; top: 244'>Coming Soon!</div> </a>
+          <img id = 'file3' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html'id = 'website3'><div id = 'link3' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
       </div>
       <div id = 'div4'>
-          <img id = 'file4' class = 'files' src = 'filefolder.png' style = 'top: 235'><a href = 'https://samswaringen.github.io/default%20page'id = 'website4'><div id = 'link4' class = 'links' style = 'height: 29; top: 284'>Coming Soon!</div> </a>
+          <img id = 'file4' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html'id = 'website4'><div id = 'link4' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
       </div>
       <div id = 'div5'>
-          <img id = 'file5' class = 'files' src = 'filefolder.png' style = 'top: 275'><a href = 'https://samswaringen.github.io/default%20page' id = 'website5'><div id = 'link5' class = 'links' style = 'height: 29; top: 324'>Coming Soon!</div> </a>
+          <img id = 'file5' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website5'><div id = 'link5' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
       </div>
       <div id = 'div6'>
-          <img id = 'file6' class = 'files' src = 'filefolder.png' style = 'top: 315'><a href = 'https://samswaringen.github.io/default%20page'id = 'website6'><div id = 'link6' class = 'links' style = 'height: 29; top: 364'>Coming Soon!</div> </a>
+          <img id = 'file6' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html'id = 'website6'><div id = 'link6' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
       </div>
       <div id = 'div7'>
-          <img id = 'file7' class = 'files' src = 'filefolder.png' style = 'top: 355'><a href = 'https://samswaringen.github.io/default%20page' id = 'website7'><div id = 'link7' class = 'links' style = 'height: 29; top: 404'>Coming Soon!</div> </a>
+          <img id = 'file7' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website7'><div id = 'link7' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
       </div>
       <div id = 'div8'>
-          <img id = 'file8' class = 'files' src = 'filefolder.png' style = 'top: 395'><a href = 'https://samswaringen.github.io/week4' id = 'website8'><div id = 'link8' class = 'links' style = 'height: 29; top: 444'><img src = 'PacMan1.png' id = 'pacPic' width = '15' height = '15'>PacManEraser<img src = 'Ghost.png' id = 'ghostPic' width = '15' height = '15'></div> </a>
+          <img id = 'file8' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = 'https://samswaringen.github.io/week4' id = 'website8'><div id = 'link8' class = 'links' style = 'height: 29; top: 129'><img src = 'PacMan1.png' id = 'pacPic' width = '15' height = '15'>PacManEraser<img src = 'Ghost.png' id = 'ghostPic' width = '15' height = '15'></div> </a>
       </div>
       <div id = 'div9'>
-          <img id = 'file9' class = 'files' src = 'filefolder.png' style = 'top: 435'><a href = 'https://samswaringen.github.io/week3' id = 'website9'><div id = 'link9' class = 'links' style = 'height: 51; top: 484'>Random Painter</div></a>
-          <a href = 'https://samswaringen.github.io/week3' id = 'website10'><div id = 'link10' class = 'links' style = 'height: 68; top: 484'></div></a>
+          <img id = 'file9' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = 'https://samswaringen.github.io/week3' id = 'website9'><div id = 'link9' class = 'links' style = 'height: 44; top: 129'>Random Painter</div></a>
+          <a href = 'https://samswaringen.github.io/week3' id = 'website10'><div id = 'link10' class = 'links' style = 'height: 68; top: 540'></div></a>
       </div>
     </div>
     <div id = 'iframeDiv'></div>
     <div id = 'inner-Frame'>
-    <iframe src = 'https://samswaringen.github.io/default%20page' id = 'newFrame' name = 'newFrame' scrolling = 'no' style = 'width: 550; height: 683;'></iframe>
+    <iframe src = '../default%20page/aboutme.html' id = 'newFrame' name = 'newFrame' scrolling = 'no' style = 'width: 550; height: 683;'></iframe>
     </div>
 
     <script src = 'script.js'></script>
