removed mapbox token

--- a/bustracker/index.html
+++ b/bustracker/index.html
@@ -18,7 +18,7 @@
 <div id="map"></div>
 
 <script>
- mapboxgl.accessToken = 'pk.eyJ1Ijoic2Ftc3dhcmluZ2VuIiwiYSI6ImNrbHh0cnV5ZDJ1cG0yb2x3MTRsOXVjZ2sifQ.UMlM0h2TgOuOddV2X73ewQ';
+ mapboxgl.accessToken = '';
 
 
 var map = new mapboxgl.Map({
