--- a/bustracker/index.html
+++ b/bustracker/index.html
@@ -8,25 +8,39 @@
 <link href="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css" rel="stylesheet" />
 <style>
   body { margin: 0; padding: 0; }
-  #map { position: absolute; top: 0; bottom: 0; width: 100%; }
-  .map-overlay { position: absolute; left: 0; padding: 10px}
+  #map { position: absolute; top: 0; bottom: 0; left: 0; width: 100%; }
+  #input { position: absolute; top: 0}
+  .button-overlay { position: absolute; left: 400;}; 
+  .input-overlay {position: absolute; padding: 10px;}
   .bus-marker { width: 50px; height: 50px; background: url('yellowbus.png'); background-size: contain;}
 </style>
 </head>
 <body>
 
 <div id="map"></div>
+<div id = 'input'>
+	Mapbox Access Token:<input id = 'token' type = 'text' class='input-overlay'>
+<button id = 'submit' class='button-overlay' onclick='inputToken()'>Submit</button>
+</div>
 
 <script>
- mapboxgl.accessToken = '';
+var map;
+mapboxgl.accessToken = '';
 
-
-var map = new mapboxgl.Map({
+function inputToken(){
+	let mapToken = document.getElementById('token').value;
+	mapboxgl.accessToken = mapToken;
+	document.getElementById('token').value = '';
+	map = new mapboxgl.Map({
 	container: 'map',
 	style: 'mapbox://styles/mapbox/streets-v11',
 	center: [-71.104081, 42.365554],
 	zoom: 14
-});
+	});
+	addStops();
+	run();
+
+}
 const busStops = [
       [-71.093729, 42.359244],
       [-71.094915, 42.360175],
@@ -42,14 +56,17 @@ const busStops = [
       [-71.118625, 42.374863]
     ];
 
-busStops.forEach((item)=>{
+addStops = ()=>{
+	busStops.forEach((item)=>{
 	busStopIcon = document.createElement('img');
 	busStopIcon.src = 'busstop.png';
 	busStopIcon.style.width = busStopIcon.style.height = '25px';
 	new mapboxgl.Marker(busStopIcon).setLngLat([item[0],item[1]]).addTo(map);
-})
+	})
+}
 currBusMarkers = [];
 busPopups =[];
+
 async function run(){
     // get bus data    
 	const locations = await getBusLocations();
@@ -100,7 +117,6 @@ async function getBusLocations(){
 	return json.data;
 }
 
-run();
 
 </script>
 </body>
