--- a/index.html
+++ b/index.html
@@ -1,69 +1,67 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--my own CSS-->
-    <link rel='stylesheet' type='text/css' href='style.css' /> 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
-    <title>Landing page</title>
-  </head>
-  <body class = 'body-grid'>
-    <header><span id = 'title'>Sam's Portfolio</span>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href='default%20page/aboutme.html'>About Me</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href='default%20page/links.html'>Links</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Projects
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href='https://samswaringen.github.io/week3'>Random Painter</a></li>
-                  <li><a class="dropdown-item" href='https://samswaringen.github.io/week4'>PacMan Eraser</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-            </ul>
+<html>
+    <head>        
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Barrio&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Flavors&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Monofett&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Slackey&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Knewave&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Fascinate&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Miltonian&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Butcherman&display=swap" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel='stylesheet' type='text/css' href='style.css' /> 
+    </head> 
+      <div id = 'background'></div>
+      <div id = 'header'>Sam Swaringen's Portfolio</div>
+      <div id = 'folders'>
+          <div id = 'div0'>
+        <img id = 'file0' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website0'><div id = 'link0' class = 'links' style = 'height: 29; top: 129'>About Me</div></a>
+        <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend0'></div>
           </div>
+        <div id = 'div1'>
+          <img id = 'file1' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website1'><div id = 'link1' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div></a>
+          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend1'></div>
         </div>
-      </nav>
-      </header>
-      <aside id = 'aside-left'>
-        <a href = 'portfolio webpage/index.html' id = 'portfolioImg'><div id = 'gifDiv' style="width:100%;height:100%;position:relative;background-image: url(cabinet_closed.jpg);">Projects</div></a>
-      </aside>
-    <article>
-        <iframe width="720" height="405" src="https://www.youtube.com/embed/?listType=playlist&list=PLs1pmxBvOzVpzouqMoz3oZiTqH6ADJ1b5" frameborder="0" allowfullscreen></iframe>
-    </article>
-    <aside class = 'aside-right'>
-        <div class = 'aboutme div'> 
-            <iframe src = 'default%20page/aboutme.html'></iframe>
+      <div id = 'div2'>
+          <img id = 'file2' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website2'><div id = 'link2' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
+          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend2'></div>
         </div>
-        <div class = 'links div'>
-            <iframe src = 'default%20page/links.html'></iframe>
+      <div id = 'div3'>
+          <img id = 'file3' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html'id = 'website3'><div id = 'link3' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
+          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend3'></div>
         </div>
-    </aside>
-    <footer>Made by Sam Swaringen 2021</footer>
-    <!--my own JS-->
-    <script src = 'script.js'></script>
-    <!--Bootstap JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+      <div id = 'div4'>
+          <img id = 'file4' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html'id = 'website4'><div id = 'link4' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
+          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend4'></div>
+        </div>
+      <div id = 'div5'>
+          <img id = 'file5' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website5'><div id = 'link5' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
+          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend5'></div>
+        </div>
+      <div id = 'div6'>
+          <img id = 'file6' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html'id = 'website6'><div id = 'link6' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
+          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend6'></div>
+        </div>
+      <div id = 'div7'>
+          <img id = 'file7' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link7' class = 'links' style = 'height: 29; top: 129'>Bus Tracker</div>
+          <a href = 'https://samswaringen.github.io/bustracker' id = 'website7'><div class = 'extend' style = 'top: 129; height: 29;' id = 'extend7'></div></a>
+        </div>
+      <div id = 'div8'>
+          <img id = 'file8' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link8' class = 'links' style = 'height: 29; top: 129'><img src = 'PacMan1.png' id = 'pacPic' width = '15' height = '15'>PacManEraser<img src = 'Ghost.png' id = 'ghostPic' width = '15' height = '15'></div>
+          <a href = 'https://samswaringen.github.io/week4' id = 'website8'><div class = 'extend' style = 'top: 129; height: 29;' id = 'extend8'></div></a>
+        </div>
+      <div id = 'div9'>
+          <img id = 'file9' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link9' class = 'links' style = 'height: 44; top: 129'>Random Painter</div>
+          <a href = 'https://samswaringen.github.io/week3' id = 'website9'><div class = 'extend' style = 'top: 129; height: 44;' id = 'extend9'></div></a>
+      </div>
+    </div>
+    <div id = 'iframeDiv'></div>
+    <div id = 'inner-Frame'>
+    <iframe src = '../default%20page/aboutme.html' id = 'newFrame' name = 'newFrame' scrolling = 'no' style = 'width: 550; height: 683;'></iframe>
+    </div>
 
-  </body>
+    <script src = 'script.js'></script>
 </html>
