--- a/portfolio webpage/index.html
+++ b/portfolio webpage/index.html
@@ -19,34 +19,43 @@
       <div id = 'folders'>
           <div id = 'div0'>
         <img id = 'file0' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website0'><div id = 'link0' class = 'links' style = 'height: 29; top: 129'>About Me</div></a>
+        <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend0'></div>
           </div>
         <div id = 'div1'>
           <img id = 'file1' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website1'><div id = 'link1' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div></a>
-      </div>
+          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend1'></div>
+        </div>
       <div id = 'div2'>
           <img id = 'file2' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website2'><div id = 'link2' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
-      </div>
+          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend2'></div>
+        </div>
       <div id = 'div3'>
           <img id = 'file3' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html'id = 'website3'><div id = 'link3' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
-      </div>
+          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend3'></div>
+        </div>
       <div id = 'div4'>
           <img id = 'file4' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html'id = 'website4'><div id = 'link4' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
-      </div>
+          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend4'></div>
+        </div>
       <div id = 'div5'>
           <img id = 'file5' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website5'><div id = 'link5' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
-      </div>
+          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend5'></div>
+        </div>
       <div id = 'div6'>
           <img id = 'file6' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html'id = 'website6'><div id = 'link6' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
-      </div>
+          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend6'></div>
+        </div>
       <div id = 'div7'>
-          <img id = 'file7' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website7'><div id = 'link7' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
-      </div>
+          <img id = 'file7' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link7' class = 'links' style = 'height: 29; top: 129'>Bus Tracker</div>
+          <a href = 'https://samswaringen.github.io/bustracker' id = 'website7'><div class = 'extend' style = 'top: 129; height: 29;' id = 'extend7'></div></a>
+        </div>
       <div id = 'div8'>
-          <img id = 'file8' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = 'https://samswaringen.github.io/week4' id = 'website8'><div id = 'link8' class = 'links' style = 'height: 29; top: 129'><img src = 'PacMan1.png' id = 'pacPic' width = '15' height = '15'>PacManEraser<img src = 'Ghost.png' id = 'ghostPic' width = '15' height = '15'></div> </a>
-      </div>
+          <img id = 'file8' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link8' class = 'links' style = 'height: 29; top: 129'><img src = 'PacMan1.png' id = 'pacPic' width = '15' height = '15'>PacManEraser<img src = 'Ghost.png' id = 'ghostPic' width = '15' height = '15'></div>
+          <a href = 'https://samswaringen.github.io/week4' id = 'website8'><div class = 'extend' style = 'top: 129; height: 29;' id = 'extend8'></div></a>
+        </div>
       <div id = 'div9'>
-          <img id = 'file9' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = 'https://samswaringen.github.io/week3' id = 'website9'><div id = 'link9' class = 'links' style = 'height: 44; top: 129'>Random Painter</div></a>
-          <a href = 'https://samswaringen.github.io/week3' id = 'website10'><div id = 'link10' class = 'links' style = 'height: 68; top: 540'></div></a>
+          <img id = 'file9' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link9' class = 'links' style = 'height: 44; top: 129'>Random Painter</div>
+          <a href = 'https://samswaringen.github.io/week3' id = 'website9'><div class = 'extend' style = 'top: 129; height: 44;' id = 'extend9'></div></a>
       </div>
     </div>
     <div id = 'iframeDiv'></div>
