--- a/portfolio webpage/index.html
+++ b/portfolio webpage/index.html
@@ -13,55 +13,59 @@
         <link href="https://fonts.googleapis.com/css2?family=Butcherman&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel='stylesheet' type='text/css' href='style.css' /> 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     </head> 
-      <div id = 'background'></div>
+    <body style = 'background-image: url(blackandwhite.png);'>
       <div id = 'header'>Sam Swaringen's Portfolio</div>
+      <div id = 'navBarDiv'></div>
       <div id = 'folders'>
           <div id = 'div0'>
-        <img id = 'file0' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website0'><div id = 'link0' class = 'links' style = 'height: 29; top: 129'>About Me</div></a>
-        <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend0'></div>
+        <img id = 'file0' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link0' class = 'links' style = 'height:35; top: 129'>About Me</div>
+        <a href = '../default%20page/aboutme.html' id = 'website0'><div class = 'extend' style = 'top: 129; height:35;' id = 'extend0'></div></a>
           </div>
         <div id = 'div1'>
-          <img id = 'file1' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website1'><div id = 'link1' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div></a>
-          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend1'></div>
+          <img id = 'file1' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link1' class = 'links' style = 'height:35; top: 129'>Coming Soon!</div>
+          <a href = '../default%20page/aboutme.html' id = 'website1'><div class = 'extend' style = 'top: 129; height:35;' id = 'extend1'></div></a>
         </div>
       <div id = 'div2'>
-          <img id = 'file2' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website2'><div id = 'link2' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
-          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend2'></div>
+          <img id = 'file2' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link2' class = 'links' style = 'height:35; top: 129'>Coming Soon!</div>
+          <a href = '../default%20page/aboutme.html' id = 'website2'><div class = 'extend' style = 'top: 129; height:35;' id = 'extend2'></div></a>
         </div>
       <div id = 'div3'>
-          <img id = 'file3' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html'id = 'website3'><div id = 'link3' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
-          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend3'></div>
+          <img id = 'file3' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link3' class = 'links' style = 'height:35; top: 129'>Coming Soon!</div>
+          <a href = '../default%20page/aboutme.html'id = 'website3'><div class = 'extend' style = 'top: 129; height:35;' id = 'extend3'></div></a>
         </div>
       <div id = 'div4'>
-          <img id = 'file4' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html'id = 'website4'><div id = 'link4' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
-          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend4'></div>
+          <img id = 'file4' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link4' class = 'links' style = 'height:35; top: 129'>Coming Soon!</div>
+          <a href = '../default%20page/aboutme.html'id = 'website4'><div class = 'extend' style = 'top: 129; height:35;' id = 'extend4'></div></a>
         </div>
       <div id = 'div5'>
-          <img id = 'file5' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html' id = 'website5'><div id = 'link5' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
-          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend5'></div>
+          <img id = 'file5' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link5' class = 'links' style = 'height:35; top: 129'>Coming Soon!</div>
+          <a href = '../default%20page/aboutme.html' id = 'website5'><div class = 'extend' style = 'top: 129; height:35;' id = 'extend5'></div></a>
         </div>
       <div id = 'div6'>
-          <img id = 'file6' class = 'files' src = 'grayfolder.png' style = 'top: 35'><a href = '../default%20page/aboutme.html'id = 'website6'><div id = 'link6' class = 'links' style = 'height: 29; top: 129'>Coming Soon!</div> </a>
-          <div class = 'extend' style = 'top: 129; height: 29;' id = 'extend6'></div>
+          <img id = 'file6' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link6' class = 'links' style = 'height:35; top: 129'>Coming Soon!</div>
+          <a href = '../default%20page/aboutme.html'id = 'website6'><div class = 'extend' style = 'top: 129; height:35;' id = 'extend6'></div></a>
         </div>
       <div id = 'div7'>
-          <img id = 'file7' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link7' class = 'links' style = 'height: 29; top: 129'>Bus Tracker</div>
-          <a href = 'https://samswaringen.github.io/bustracker' id = 'website7'><div class = 'extend' style = 'top: 129; height: 29;' id = 'extend7'></div></a>
+          <img id = 'file7' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link7' class = 'links' style = 'height:35; top: 129'>Bus Tracker</div>
+          <a href = 'https://samswaringen.github.io/bustracker' id = 'website7'><div class = 'extend' style = 'top: 129; height:35;' id = 'extend7'></div></a>
         </div>
       <div id = 'div8'>
-          <img id = 'file8' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link8' class = 'links' style = 'height: 29; top: 129'><img src = 'PacMan1.png' id = 'pacPic' width = '15' height = '15'>PacManEraser<img src = 'Ghost.png' id = 'ghostPic' width = '15' height = '15'></div>
-          <a href = 'https://samswaringen.github.io/week4' id = 'website8'><div class = 'extend' style = 'top: 129; height: 29;' id = 'extend8'></div></a>
+          <img id = 'file8' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link8' class = 'links' style = 'height: 35; top: 129'><img src = 'PacMan1.png' id = 'pacPic' width = '15' height = '15'>PacManEraser<img src = 'Ghost.png' id = 'ghostPic' width = '15' height = '15'></div>
+          <a href = 'https://samswaringen.github.io/week4' id = 'website8'><div class = 'extend' style = 'top: 129; height: 35;' id = 'extend8'></div></a>
         </div>
       <div id = 'div9'>
-          <img id = 'file9' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link9' class = 'links' style = 'height: 44; top: 129'>Random Painter</div>
-          <a href = 'https://samswaringen.github.io/week3' id = 'website9'><div class = 'extend' style = 'top: 129; height: 44;' id = 'extend9'></div></a>
+          <img id = 'file9' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link9' class = 'links' style = 'height: 60; top: 129'>Random Painter</div>
+          <a href = 'https://samswaringen.github.io/week3' id = 'website9'><div class = 'extend' style = 'top: 129; height: 60;' id = 'extend9'></div></a>
       </div>
     </div>
     <div id = 'iframeDiv'></div>
     <div id = 'inner-Frame'>
     <iframe src = '../default%20page/aboutme.html' id = 'newFrame' name = 'newFrame' scrolling = 'no' style = 'width: 550; height: 683;'></iframe>
     </div>
-
+    <script src = '../navBar.js'></script> 
     <script src = 'script.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>  
+</body>
 </html>
