--- a/portfolio webpage/index.html
+++ b/portfolio webpage/index.html
@@ -44,8 +44,8 @@
           <a href = '../default%20page/aboutme.html' id = 'website5'><div class = 'extend' style = 'top: 129; height:35;' id = 'extend5'></div></a>
         </div>
       <div id = 'div6'>
-          <img id = 'file6' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link6' class = 'links' style = 'height:35; top: 129'>Coming Soon!</div>
-          <a href = '../default%20page/aboutme.html'id = 'website6'><div class = 'extend' style = 'top: 129; height:35;' id = 'extend6'></div></a>
+          <img id = 'file6' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link6' class = 'links' style = 'height:35; top: 129'>Coding_Challenges</div>
+          <a href = 'https://samswaringen.github.io/challenges'id = 'website6'><div class = 'extend' style = 'top: 129; height:35;' id = 'extend6'></div></a>
         </div>
       <div id = 'div7'>
           <img id = 'file7' class = 'files' src = 'grayfolder.png' style = 'top: 35'><div id = 'link7' class = 'links' style = 'height:35; top: 129'>Bus Tracker</div>
