updated for eyes project

--- a/portfolio webpage/index.html
+++ b/portfolio webpage/index.html
@@ -16,7 +16,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     </head> 
     <body style = 'background-image: url(blackandwhite.png);'>
-      <div id = 'header'>Sam Swaringen's Portfolio</div>
+      <div id = 'header'>Projects Portfolio</div>
       <div id = 'navBarDiv'></div>
       <div id = 'folders'>
           <div id = 'div0'>
@@ -40,8 +40,8 @@
           <a href = '../default%20page/aboutme.html'id = 'website4'><div class = 'extend' style = 'top: 109; height:35;' id = 'extend4'></div></a>
         </div>
       <div id = 'div5'>
-          <img id = 'file5' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link5' class = 'links' style = 'height:35; top: 109'>Coming Soon!</div>
-          <a href = '../default%20page/aboutme.html' id = 'website5'><div class = 'extend' style = 'top: 109; height:35;' id = 'extend5'></div></a>
+          <img id = 'file5' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link5' class = 'links' style = 'height:35; top: 109'>EYES</div>
+          <a href = 'https://samswaringen.github.io/eyes' id = 'website5'><div class = 'extend' style = 'top: 109; height:35;' id = 'extend5'></div></a>
         </div>
       <div id = 'div6'>
           <img id = 'file6' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link6' class = 'links' style = 'height:35; top: 109'>Coding_Challenges</div>
