updated with eye project

--- a/portfolio webpage/index.html
+++ b/portfolio webpage/index.html
@@ -40,7 +40,7 @@
           <a href = '../default%20page/aboutme.html'id = 'website4'><div class = 'extend' style = 'top: 109; height:35;' id = 'extend4'></div></a>
         </div>
       <div id = 'div5'>
-          <img id = 'file5' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link5' class = 'links' style = 'height:35; top: 109'>EYES</div>
+          <img id = 'file5' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link5' class = 'links' style = 'height:35; top: 109'><img src='eyeE.png' class = 'eye' width = '15' height = '15'>y<img src='eyeE.png' class = 'eye' width = '15' height = '15'>s</div>
           <a href = 'https://samswaringen.github.io/eyes' id = 'website5'><div class = 'extend' style = 'top: 109; height:35;' id = 'extend5'></div></a>
         </div>
       <div id = 'div6'>
