--- a/challenges/index.html
+++ b/challenges/index.html
@@ -6,27 +6,27 @@
         <div class = 'userInput' id = 'likes'>Enter name(s):<input type = 'text' id = 'likes-input'><button onclick = 'runLikes()'>Submit</button><br>
         Takes an arbitrary amount of names and generates a response similar to Facebook likes<br>
         For example: Sam likes this! Enter any number of names in the input</div>
-        <div class = 'output' id = 'likes-output'>Answer:</div>
+        <div class = 'output' id = 'likes-outer'>Answer<div class = 'answer' id = 'likes-output'></div></div>
         <div class = 'userInput' id = 'opposite'>Enter number:<input type = 'text' id = 'opposite-input'><button onclick = 'runOpposite()'>Submit</button><br>
         Takes any number and returns the opposite number</div>
-        <div class = 'output' id = 'opposite-output'>Answer:</div>
+        <div class = 'output' id = 'opposite-outer'>Answer<div class = 'answer' id = 'opposite-output'></div></div>
         <div class = 'userInput' id = 'digitalRoot'>Find the digital root of:<input type = 'text' id = 'digital-input'><button onclick = 'runDigital()'>Submit</button><br>
         The Digital root is the sum of all integers contained in a number and repeated until the sum is a single digit integer.<br>
         For example: the digital root of 26 is 8!</div>
-        <div class = 'output' id = 'digital-output'>Answer:</div>
+        <div class = 'output' id = 'digital-outer'>Answer<div class = 'answer' id = 'digital-output'></div></div>
         <div class = 'userInput' id = 'highLow'>Find highest and lowest numbers of:<input type = 'text' id = 'highlow-input'><button onclick = 'runHighLow()'>Submit</button><br>
         Finds the highest and lowest integer in a string of integers.</div>
-        <div class = 'output' id = 'highlow-output'>Answer:</div>
+        <div class = 'output' id = 'highlow-outer'>Answer<div class = 'answer' id = 'highlow-output'></div></div>
         <div class = 'userInput' id = 'myAtoi'>Enter myAtoi input:<input type = 'text' id = 'myAtoi-input'><button onclick = 'runAtoi()'>Submit</button><br>
         The myAtoi function converts a string to a 32-bit signed integer. It ignores leading whitespace and checks if a character is a '+' or '-'. Once an integer is found it reads into each following character until a non-integer is found and returns total string of integers with correct sign. If no digits are read then it returns 0</div>
-        <div class = 'output' id = 'myAtoi-output'>Answer:</div>
+        <div class = 'output' id = 'myAtoi-outer'>Answer<div class = 'answer' id = 'myAtoi-output'></div></div>
         <div class = 'userInput' id = 'persistence'>Persistence:<input type = 'text' id = 'persist-input'><button onclick = 'runPersist()'>Submit</button><br>
         This multiplies all integers contained in a number and repeated until the result is a single digit integer</div>
-        <div class = 'output' id = 'persist-output'>Answer:</div>
+        <div class = 'output' id = 'persist-outer'>Answer<div class = 'answer' id = 'persist-output'></div></div>
         <div class = 'userInput' id = 'planeSeat'>Enter plane seat:<input type = 'text' id = 'planeSeat-input'><button onclick = 'runPlaneSeat()'>Submit</button><br>
         Takes a plane seat location for a standard commercial jet and gives you directions on where to find it in a plane.<br>
         For example: 22K or 13B</div>
-        <div class = 'output' id = 'planeSeat-output'>Answer:</div>
+        <div class = 'output' id = 'planeSeat-outer'>Answer<div class = 'answer' id = 'planeSeat-output'></div></div>
 
         <script src = 'Likes.js'></script>
         <script src = 'oppositenumber.js'></script>
