--- a/portfolio webpage/index.html
+++ b/portfolio webpage/index.html
@@ -21,35 +21,35 @@
       <div id = 'folders'>
           <div id = 'div0'>
         <img id = 'file0' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link0' class = 'links' style = 'height:35; top: 109'>About Me</div>
-        <a href = '../default%20page/aboutme.html' id = 'website0'><div class = 'extend' style = 'top: 109; height:35;' id = 'extend0'></div></a>
+        <a href = '../default%20page/aboutme.html' id = 'website0'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend0'></div></a>
           </div>
         <div id = 'div1'>
           <img id = 'file1' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link1' class = 'links' style = 'height:35; top: 109'>Coming Soon!</div>
-          <a href = '../default%20page/aboutme.html' id = 'website1'><div class = 'extend' style = 'top: 109; height:35;' id = 'extend1'></div></a>
+          <a href = '../default%20page/aboutme.html' id = 'website1'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend1'></div></a>
         </div>
       <div id = 'div2'>
           <img id = 'file2' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link2' class = 'links' style = 'height:35; top: 109'>Coming Soon!</div>
-          <a href = '../default%20page/aboutme.html' id = 'website2'><div class = 'extend' style = 'top: 109; height:35;' id = 'extend2'></div></a>
+          <a href = '../default%20page/aboutme.html' id = 'website2'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend2'></div></a>
         </div>
       <div id = 'div3'>
           <img id = 'file3' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link3' class = 'links' style = 'height:35; top: 109'>Coming Soon!</div>
-          <a href = '../default%20page/aboutme.html'id = 'website3'><div class = 'extend' style = 'top: 109; height:35;' id = 'extend3'></div></a>
+          <a href = '../default%20page/aboutme.html'id = 'website3'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend3'></div></a>
         </div>
       <div id = 'div4'>
           <img id = 'file4' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link4' class = 'links' style = 'height:35; top: 109'>Coming Soon!</div>
-          <a href = '../default%20page/aboutme.html'id = 'website4'><div class = 'extend' style = 'top: 109; height:35;' id = 'extend4'></div></a>
+          <a href = '../default%20page/aboutme.html'id = 'website4'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend4'></div></a>
         </div>
       <div id = 'div5'>
           <img id = 'file5' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link5' class = 'links' style = 'height:35; top: 109'><img src='eyeE.png' class = 'eye' width = '15' height = '15'>y<img src='eyeE.png' class = 'eye' width = '15' height = '15'>s</div>
-          <a href = 'https://samswaringen.github.io/eyes' id = 'website5'><div class = 'extend' style = 'top: 109; height:35;' id = 'extend5'></div></a>
+          <a href = 'https://samswaringen.github.io/eyes' id = 'website5'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend5'></div></a>
         </div>
       <div id = 'div6'>
           <img id = 'file6' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link6' class = 'links' style = 'height:35; top: 109'>Coding_Challenges</div>
-          <a href = 'https://samswaringen.github.io/challenges'id = 'website6'><div class = 'extend' style = 'top: 109; height:35;' id = 'extend6'></div></a>
+          <a href = 'https://samswaringen.github.io/challenges'id = 'website6'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend6'></div></a>
         </div>
       <div id = 'div7'>
           <img id = 'file7' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link7' class = 'links' style = 'height:35; top: 109'>Bus Tracker</div>
-          <a href = 'https://samswaringen.github.io/bustracker' id = 'website7'><div class = 'extend' style = 'top: 109; height:35;' id = 'extend7'></div></a>
+          <a href = 'https://samswaringen.github.io/bustracker' id = 'website7'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend7'></div></a>
         </div>
       <div id = 'div8'>
           <img id = 'file8' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link8' class = 'links' style = 'height: 35; top: 109'><img src = 'PacMan1.png' id = 'pacPic' width = '15' height = '15'>PacManEraser<img src = 'Ghost.png' id = 'ghostPic' width = '15' height = '15'></div>
