--- a/challenges/index.html
+++ b/challenges/index.html
@@ -1,31 +1,51 @@
 <html>
     <head>
         <link rel='stylesheet' type='text/css' href='style.css' /> 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class = 'userInput' id = 'likes'>Enter name(s):<input type = 'text' id = 'likes-input'><button onclick = 'runLikes()'>Submit</button><br>
-        Takes an arbitrary amount of names and generates a response similar to Facebook likes<br>
-        For example: Sam likes this! Enter any number of names in the input</div>
-        <div class = 'output' id = 'likes-outer'>Answer<div class = 'answer' id = 'likes-output'></div></div>
-        <div class = 'userInput' id = 'opposite'>Enter number:<input type = 'text' id = 'opposite-input'><button onclick = 'runOpposite()'>Submit</button><br>
-        Takes any number and returns the opposite number</div>
+        <div class = 'userInput' id = 'opposite'><strong>Get the Opposite Number</strong><br>
+            <br>
+            Enter number:<input type = 'text' id = 'opposite-input'><button onclick = 'runOpposite()'>Submit</button>
+            <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Takes any number and returns the opposite number">Learn More</button>
+        </div>
         <div class = 'output' id = 'opposite-outer'>Answer<div class = 'answer' id = 'opposite-output'></div></div>
-        <div class = 'userInput' id = 'digitalRoot'>Find the digital root of:<input type = 'text' id = 'digital-input'><button onclick = 'runDigital()'>Submit</button><br>
-        The Digital root is the sum of all integers contained in a number and repeated until the sum is a single digit integer.<br>
-        For example: the digital root of 26 is 8!</div>
+        <div class = 'userInput' id = 'likes'><strong>Likes Emulator</strong><br>
+            <br>
+            Enter name(s):<input type = 'text' id = 'likes-input'><button onclick = 'runLikes()'>Submit</button>
+            <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Takes an arbitrary amount of names and generates a response similar to Facebook likes.For example: Sam likes this! Enter any number of names in the input">Learn More</button>
+        </div>
+        <div class = 'output' id = 'likes-outer'>Answer<div class = 'answer' id = 'likes-output'></div></div>
+        <div class = 'userInput' id = 'digitalRoot'><strong>Find the Digital Root</strong><br>
+            <br>
+            Enter Number:<input type = 'text' id = 'digital-input'><button onclick = 'runDigital()'>Submit</button>
+            <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="The Digital root is the sum of all integers contained in a number and repeated until the sum is a single digit integer. For example: the digital root of 26 is 8!">Learn More</button>
+        </div>
         <div class = 'output' id = 'digital-outer'>Answer<div class = 'answer' id = 'digital-output'></div></div>
-        <div class = 'userInput' id = 'highLow'>Find highest and lowest numbers of:<input type = 'text' id = 'highlow-input'><button onclick = 'runHighLow()'>Submit</button><br>
-        Finds the highest and lowest integer in a string of integers.</div>
+        <div class = 'userInput' id = 'highLow'><strong>Highest and Lowest number</strong><br>
+            <br>
+            Enter Number:<input type = 'text' id = 'highlow-input'><button onclick = 'runHighLow()'>Submit</button>
+            <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Finds the highest and lowest integer in a string of integers.">Learn More</button>
+        </div>
         <div class = 'output' id = 'highlow-outer'>Answer<div class = 'answer' id = 'highlow-output'></div></div>
-        <div class = 'userInput' id = 'myAtoi'>Enter myAtoi input:<input type = 'text' id = 'myAtoi-input'><button onclick = 'runAtoi()'>Submit</button><br>
-        The myAtoi function converts a string to a 32-bit signed integer. It ignores leading whitespace and checks if a character is a '+' or '-'. Once an integer is found it reads into each following character until a non-integer is found and returns total string of integers with correct sign. If no digits are read then it returns 0</div>
+        <div class = 'userInput' id = 'myAtoi'><strong>My Atoi</strong><br>
+            <br>
+            Enter string:<input type = 'text' id = 'myAtoi-input'><button onclick = 'runAtoi()'>Submit</button>
+            <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="The myAtoi function converts a string to a 32-bit signed integer. It ignores leading whitespace and checks if a character is a '+' or '-'. Once an integer is found it reads into each following character until a non-integer is found and returns total string of integers with correct sign. If no digits are read then it returns 0">Learn More</button>
+        </div>
         <div class = 'output' id = 'myAtoi-outer'>Answer<div class = 'answer' id = 'myAtoi-output'></div></div>
-        <div class = 'userInput' id = 'persistence'>Persistence:<input type = 'text' id = 'persist-input'><button onclick = 'runPersist()'>Submit</button><br>
-        This multiplies all integers contained in a number and repeated until the result is a single digit integer</div>
+        <div class = 'userInput' id = 'persistence'><strong>Persistence</strong><br>
+            <br>
+            Enter Number:<input type = 'text' id = 'persist-input'><button onclick = 'runPersist()'>Submit</button>
+            <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="This multiplies all integers contained in a number and repeated until the result is a single digit integer">Learn More</button>
+        </div>
         <div class = 'output' id = 'persist-outer'>Answer<div class = 'answer' id = 'persist-output'></div></div>
-        <div class = 'userInput' id = 'planeSeat'>Enter plane seat:<input type = 'text' id = 'planeSeat-input'><button onclick = 'runPlaneSeat()'>Submit</button><br>
-        Takes a plane seat location for a standard commercial jet and gives you directions on where to find it in a plane.<br>
-        For example: 22K or 13B</div>
+        <div class = 'userInput' id = 'planeSeat'><strong>Where's my Plane Seat</strong><br>
+            <br>
+            Enter plane seat:<input type = 'text' id = 'planeSeat-input'><button onclick = 'runPlaneSeat()'>Submit</button>
+            <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content=" Takes a plane seat location for a standard commercial jet and gives you directions on where to find it in a plane. For example: 22K or 13B">Learn More</button>
+        </div>
         <div class = 'output' id = 'planeSeat-outer'>Answer<div class = 'answer' id = 'planeSeat-output'></div></div>
 
         <script src = 'Likes.js'></script>
@@ -35,5 +55,8 @@
         <script src = 'myAtoi.js'></script>
         <script src = 'persistence.js'></script>
         <script src = 'planeseat.js'></script>
+        <script src = 'popover.js'></script>
+    
+
     </body>
 </html>
