updated javascript functionality

--- a/portfolio webpage/index.html
+++ b/portfolio webpage/index.html
@@ -53,11 +53,11 @@
         </div>
       <div id = 'div8'>
           <img id = 'file8' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link8' class = 'links' style = 'height: 35; top: 109'><img src = 'PacMan1.png' id = 'pacPic' width = '15' height = '15'>PacManEraser<img src = 'Ghost.png' id = 'ghostPic' width = '15' height = '15'></div>
-          <a href = 'https://samswaringen.github.io/week4' id = 'website8'><div class = 'extend' style = 'top: 109; height: 35;' id = 'extend8'></div></a>
+          <a href = 'https://samswaringen.github.io/week4' id = 'website8'><div class = 'extend' style = 'top: 109; height: 35; width: 182;' id = 'extend8'></div></a>
         </div>
       <div id = 'div9'>
           <img id = 'file9' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link9' class = 'links' style = 'height: 60; top: 109'>Random Painter</div>
-          <a href = 'https://samswaringen.github.io/week3' id = 'website9'><div class = 'extend' style = 'top: 109; height: 60;' id = 'extend9'></div></a>
+          <a href = 'https://samswaringen.github.io/week3' id = 'website9'><div class = 'extend' style = 'top: 109; height: 60; width: 182;' id = 'extend9'></div></a>
       </div>
     </div>
     <div id = 'iframeDiv'></div>
